--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "rm -rf lib && babel src -d lib --no-comments",
     "bundle": "webpack && webpack -p --output-filename mirror.min.js"
   },
-  "main": "./lib/index.js",
   "keywords": [
     "framework",
     "react",
@@ -29,15 +28,14 @@
   "dependencies": {
     "history": "^4.6.1",
     "react-redux": "^5.0.0",
-    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0"
   },
   "peerDependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "prop-types": "^15.5.10"
+    "react-dom": "^15.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.1",
@@ -51,14 +49,16 @@
     "eslint": "^4.0.0",
     "eslint-plugin-react": "^7.1.0",
     "jest": "^20.0.4",
+    "prop-types": "^15.5.10",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
-    "prop-types": "^15.5.10",
     "webpack": "^3.4.0"
   },
   "files": [
     "lib/",
     "docs/",
+    "index.js",
+    "router.js",
     "README.md",
     "LICENSE"
   ],
